--- a/EntityFrameworkExample-master/EntityDatabase/MainWindow.xaml
+++ b/EntityFrameworkExample-master/EntityDatabase/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:departments="clr-namespace:Modules.Departments.Views"
+    xmlns:course="clr-namespace:Modules.Courses.Views"
     Title="MainWindow" Height="377" Width="568">
     <Grid>
-        <departments:DepartmentsList x:Name="DepartmenstUserControl"/>
+        <course:CoursesList x:Name="DepartmenstUserControl"/>
     </Grid>
 </Window>
