--- a/EntityFrameworkExample-master/EntityDatabase/Modules/OnlineCourses/Views/OnlineCoursesList.xaml
+++ b/EntityFrameworkExample-master/EntityDatabase/Modules/OnlineCourses/Views/OnlineCoursesList.xaml
@@ -10,7 +10,8 @@ d:DesignHeight="348" d:DesignWidth="569">
                   ItemsSource="{Binding  Courses}" Height="284" Width="512"
                   AutoGenerateColumns="false" RowDetailsVisibilityMode="VisibleWhenSelected">
             <DataGrid.Columns>
-                <DataGridTextColumn x:Name="UrlColumn" Binding="{Binding Path=URL}" Header="URL" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="ColumnID" Binding="{Binding Path=Course.Title}" Header="Course" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="ColumnURL" Binding="{Binding Path=URL}" Header="URL" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
