--- a/EntityFrameworkExample-master/EntityDatabase/MainWindow.xaml
+++ b/EntityFrameworkExample-master/EntityDatabase/MainWindow.xaml
@@ -1,15 +1,37 @@
 ﻿<Window x:Class="MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:officeassignments="clr-namespace:Modules.OfficeAsignament.Views"   
+    xmlns:officeasignaments="clr-namespace:Modules.OfficeAsignament.Views"   
     xmlns:persons="clr-namespace:Modules.Person.Views"   
     xmlns:courses="clr-namespace:Modules.Courses.Views"    
     xmlns:departments="clr-namespace:Modules.Departments.Views"    
     xmlns:onlinecourses="clr-namespace:Modules.OnlineCourses.Views"     
     xmlns:onsitecourses="clr-namespace:Modules.OnsiteCourses.Views"    
-    xmlns:studentgrades="clr-namespace:Modules.StudentGrades.Views"
-    Title="MainWindow" Height="377" Width="568">
+    xmlns:studentgrades="clr-namespace:Modules.StudentGrade.Views"
+    Title="MainWindow" Height="461" Width="568">
     <Grid>
-        <persons:PersonList x:Name="PersonsUserControl" Margin="26,0,99,-11"/>
+        <TabControl HorizontalAlignment="Left" Height="412" Margin="8,8,0,0" VerticalAlignment="Top" Width="542">
+            <TabItem Header="Courses">
+                <courses:CoursesList x:Name="CoursesUserControl" />
+            </TabItem>
+            <TabItem Header="Departments">
+                <departments:DepartmentsList x:Name="DepartmentUserControl" />
+            </TabItem>
+            <TabItem Header="Office Asignament">
+                <officeasignaments:OfficeAsignamentList x:Name="OfficeAssignmentsUserControl"/>
+            </TabItem>
+            <TabItem Header="Online Courses">
+                <onlinecourses:OnlineCoursesList x:Name="OnlineCoursesUserControl" />
+            </TabItem>
+            <TabItem Header="Onsite Courses">
+                <onsitecourses:OnsiteCoursesList x:Name="OnsiteCoursesUserControl" />
+            </TabItem>
+            <TabItem Header="Person">
+                <persons:PersonList x:Name="PersonsUserControl" />
+            </TabItem>
+            <TabItem Header="Student Grade">
+                <!--<studentgrades:StudentGradeList x:Name="StudentGradesUserControl" />-->
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
