--- a/EntityFrameworkExample-master/EntityDatabase/Modules/Person/Views/PersonList.xaml
+++ b/EntityFrameworkExample-master/EntityDatabase/Modules/Person/Views/PersonList.xaml
@@ -14,7 +14,7 @@
                 <DataGridTextColumn x:Name="LastNameColumn" Binding="{Binding Path=LastName}" Header="Last Name" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="FirstNameColumn" Binding="{Binding Path=FirstName}" Header="First Name" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="HireDateColumn" Binding="{Binding Path=HireDate}" Header="Hire Date" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="EnrollmentDateColumn" Binding="{Binding Path=EnrollmentDate}" Header="EnrollmentId" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="EnrollmentDateColumn" Binding="{Binding Path=EnrollmentDate}" Header="Enrollment Date   " Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
