--- a/EntityFrameworkExample-master/EntityDatabase/Modules/OnlineCourses/Views/OnlineCoursesList.xaml
+++ b/EntityFrameworkExample-master/EntityDatabase/Modules/OnlineCourses/Views/OnlineCoursesList.xaml
@@ -7,12 +7,14 @@
 d:DesignHeight="348" d:DesignWidth="569">
     <Grid Name="MainGrid">
         <DataGrid HorizontalAlignment="Left" Margin="25,30,0,0" VerticalAlignment="Top"
-                  ItemsSource="{Binding  Courses}" Height="284" Width="512"
-                  AutoGenerateColumns="false" RowDetailsVisibilityMode="VisibleWhenSelected">
+                  ItemsSource="{Binding  Courses}" Height="254" Width="512"
+                  AutoGenerateColumns="false" RowDetailsVisibilityMode="VisibleWhenSelected" SelectedItem="{Binding Seleccionado}">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="ColumnID" Binding="{Binding Path=Course.Title}" Header="Course" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="ColumnURL" Binding="{Binding Path=URL}" Header="URL" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
+        <Button Content="Crear" HorizontalAlignment="Left" Margin="181,289,0,0" VerticalAlignment="Top" Width="75" Height="36" Command="{Binding ButtonCrear}"/>
+        <Button Content="Eliminar" HorizontalAlignment="Left" Margin="278,289,0,0" VerticalAlignment="Top" Width="75" Height="36" Command="{Binding ButtonEliminar}"/>
     </Grid>
 </UserControl>
