--- a/EntityFrameworkExample-master/EntityDatabase/Modules/Person/Views/PersonCRUD.xaml
+++ b/EntityFrameworkExample-master/EntityDatabase/Modules/Person/Views/PersonCRUD.xaml
@@ -1,13 +1,18 @@
-﻿<Window x:Class="PersonCRUD"
+﻿<Window x:Class="PersonCRUDViewModel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="PersonCRUD" Height="300" Width="300">
     <Grid>
         <Label Content="ID" HorizontalAlignment="Left" Margin="33,14,0,0" VerticalAlignment="Top"/>
-        <Label Content="Last Name" HorizontalAlignment="Left" Margin="33,45,0,0" VerticalAlignment="Top"/>
-        <Label Content="First Name" HorizontalAlignment="Left" Margin="32,92,0,0" VerticalAlignment="Top"/>
-        <Label Content="Hire Date" HorizontalAlignment="Left" Margin="33,136,0,0" VerticalAlignment="Top"/>
-        <Label Content="Enrollment Date" HorizontalAlignment="Left" Margin="33,167,0,0" VerticalAlignment="Top"/>
+        <Label Content="Last Name" HorizontalAlignment="Left" Margin="33,63,0,0" VerticalAlignment="Top"/>
+        <Label Content="First Name" HorizontalAlignment="Left" Margin="32,108,0,0" VerticalAlignment="Top"/>
+        <Label Content="Hire Date" HorizontalAlignment="Left" Margin="33,152,0,0" VerticalAlignment="Top"/>
+        <Label Content="Enrollment Date" HorizontalAlignment="Left" Margin="33,192,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="144,17,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="144,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="144,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="22" Margin="144,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="22" Margin="144,196,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Aceptar" HorizontalAlignment="Left" Margin="112,239,0,0" VerticalAlignment="Top" Width="74"/>
     </Grid>
 </Window>
